--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/background_road">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:gravity="right"
             android:orientation="horizontal">
@@ -41,7 +41,7 @@
         <LinearLayout
             android:id="@+id/row1"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_vertical"
@@ -55,8 +55,8 @@
 
                 <ImageView
                     android:id="@+id/bomb1_1"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -68,8 +68,8 @@
 
                 <ImageView
                     android:id="@+id/bomb1_2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -81,8 +81,8 @@
 
                 <ImageView
                     android:id="@+id/bomb1_3"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb" />
             </LinearLayout>
@@ -94,8 +94,8 @@
 
                 <ImageView
                     android:id="@+id/bomb1_4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -107,8 +107,8 @@
 
                 <ImageView
                     android:id="@+id/bomb1_5"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -117,7 +117,7 @@
         <LinearLayout
             android:id="@+id/row2"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_vertical"
@@ -131,8 +131,8 @@
 
                 <ImageView
                     android:id="@+id/bomb2_1"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -144,8 +144,8 @@
 
                 <ImageView
                     android:id="@+id/bomb2_2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -157,8 +157,8 @@
 
                 <ImageView
                     android:id="@+id/bomb2_3"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -170,8 +170,8 @@
 
                 <ImageView
                     android:id="@+id/bomb2_4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -183,8 +183,8 @@
 
                 <ImageView
                     android:id="@+id/bomb2_5"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -193,7 +193,7 @@
         <LinearLayout
             android:id="@+id/row3"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:baselineAligned="false"
@@ -207,8 +207,8 @@
 
                 <ImageView
                     android:id="@+id/bomb3_1"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -220,8 +220,8 @@
 
                 <ImageView
                     android:id="@+id/bomb3_2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -233,8 +233,8 @@
 
                 <ImageView
                     android:id="@+id/bomb3_3"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -246,8 +246,8 @@
 
                 <ImageView
                     android:id="@+id/bomb3_4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -259,8 +259,8 @@
 
                 <ImageView
                     android:id="@+id/bomb3_5"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -269,7 +269,7 @@
         <LinearLayout
             android:id="@+id/row4"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_vertical"
@@ -283,8 +283,8 @@
 
                 <ImageView
                     android:id="@+id/bomb4_1"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -296,8 +296,8 @@
 
                 <ImageView
                     android:id="@+id/bomb4_2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -309,8 +309,8 @@
 
                 <ImageView
                     android:id="@+id/bomb4_3"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb" />
             </LinearLayout>
@@ -322,8 +322,45 @@
 
                 <ImageView
                     android:id="@+id/bomb4_4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_bomb"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical">
+
+                <ImageView
+                    android:id="@+id/bomb4_5"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_bomb"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/row5"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical">
+
+                <ImageView
+                    android:id="@+id/bomb5_1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
@@ -334,18 +371,58 @@
                 android:gravity="center_horizontal|center_vertical">
 
                 <ImageView
-                    android:id="@+id/bomb4_5"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:id="@+id/bomb5_2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_bomb"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical">
+
+                <ImageView
+                    android:id="@+id/bomb5_3"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_bomb" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical">
+
+                <ImageView
+                    android:id="@+id/bomb5_4"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_bomb"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical">
+
+                <ImageView
+                    android:id="@+id/bomb5_5"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:visibility="invisible"
                     android:src="@drawable/ic_bomb"/>
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/row5"
+            android:id="@+id/row6"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_vertical"
@@ -361,9 +438,9 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/bomb5_1"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:id="@+id/bomb6_1"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_bomb"
                         android:visibility="invisible" />
@@ -384,9 +461,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/bomb5_2"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:id="@+id/bomb6_2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:visibility="invisible"
                         android:src="@drawable/ic_bomb"/>
@@ -407,9 +484,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/bomb5_3"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:id="@+id/bomb6_3"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:visibility="invisible"
                         android:src="@drawable/ic_bomb"/>
@@ -429,9 +506,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/bomb5_4"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:id="@+id/bomb6_4"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:visibility="invisible"
                         android:src="@drawable/ic_bomb"/>
@@ -452,9 +529,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/bomb5_5"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:id="@+id/bomb6_5"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:visibility="invisible"
                         android:src="@drawable/ic_bomb"/>
@@ -467,7 +544,32 @@
                 </FrameLayout>
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/row7"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/leftArrow"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="30dp"
+                app:iconGravity="textStart"
+                app:iconSize="80dp"
 
+                app:icon="@drawable/ic_arrow"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/rightArrow"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="150dp"
+                app:icon="@drawable/ic_arrow"
+                app:iconSize="80dp"
+                app:iconGravity="textStart"
+                android:rotation="180"/>
+        </LinearLayout>
 
     </LinearLayout>
 
